--- a/templates/consultar_citas_gerente_recepcionista.html
+++ b/templates/consultar_citas_gerente_recepcionista.html
@@ -24,8 +24,9 @@
 
         <div class="my-3 p-3 bg-body rounded shadow-sm">
             <h6 class="border-bottom pb-2 mb-0">Citas</h6>
-<div class="col-auto mb-3 ">
-                <input class="form-control" type="text" id="searchbox" onkeyup="buscar( 'searchbox', 'citas') " placeholder="Buscar cita... ">
+            <div class="col-auto mb-3 ">
+                <input class="form-control" type="text" id="searchbox" onkeyup="buscar( 'searchbox', 'citas') "
+                    placeholder="Buscar cita... ">
             </div>
 
             <table id="citas" class="table table-striped table-hover">
@@ -40,17 +41,18 @@
                     </tr>
                 </thead>
                 <tbody>
-                {% for cita in citas %}
-                     <tr>
+                    {% for cita in citas %}
+                    <tr>
                         <td scope="row">{{ cita['nombre_completo'] }}</td>
                         <td>{{ cita['fecha'] }}</td>
                         <td>{{ cita['hora'] }}</td>
                         <td>${{ cita['monto'] }}</td>
-                         <td>{{ cita['nombre_sucursal'] }}</td>
-                        <td><a href="/informacion_cita/{{ cita['id_cita'] }}"  class="btn btn-primary btn-sm">Ver cita</a></td>
+                        <td>{{ cita['nombre_sucursal'] }}</td>
+                        <td><a href="/informacion_cita/{{ cita['id_cita'] }}" class="btn btn-primary btn-sm">Ver
+                                cita</a></td>
                     </tr>
 
-                {% endfor %}
+                    {% endfor %}
 
                 </tbody>
 
